data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2067.wast
;; 7. **Test Description:** Implement a scenario where `br_table` includes labels that point to blocks with different operand types, ensuring the validation process checks type consistency before allowing the branch.    - **Constraint Checked:** Ensures type consistency across labels.    - **Relation to Incorrect Branch Target Resolution:** Incorrect type handling may cause branches to unexpected blocks.

(assert_invalid
  (module
    (func $label-type-mismatch
      (block (result i32)
        (i32.const 0)
        (br_table 0 1 (i32.const 0))
      )
      (block (result f32)
        (f32.const 0.0)
        (br_table 1 0 (i32.const 1))
      )
      (i32.const 0)
    )
  )
  "type mismatch"
)